Mobile menu and hello optimization, remove slider arrows and timer-bar, remove to-top on mobile, some small fixes

--- a/public/css/all.scss
+++ b/public/css/all.scss
@@ -9,6 +9,14 @@ body {
 	padding-top: 88px;
 }
 
+.tparrows {
+	display: none;
+}
+
+.tp-bannertimer {
+	display: none;
+}
+
 .cs-brand-main-color {
 	color: #0dbff2;
 }
@@ -17,6 +25,25 @@ body {
 	width: 70px;
 	margin-top: 8px;
 	margin-left: 20px;
+}
+
+@media (max-width: 767px) {
+	body {
+		padding-top: 55px;
+	}
+
+	.navbar {
+		min-height: 45px;
+	}
+	
+	.cs-main_menu-logo {
+		width: 40px;
+	}
+
+	.btn.navbar-toggle {
+		margin-top: 10px;
+		margin-bottom: 10px;
+	}
 }
 
 .cs-wow-header {
@@ -57,27 +84,33 @@ body {
 		border: 0 none rgb(255, 255, 255);
 	}
 
-	.cs-wow-logo-name-mobile {
-		font-family: 'PT Sans';
-		font-weight: 700;
-		font-size: 300%;
-		padding: 30px 0 0;
-	}
+	.cs-wow-mobile-container {
+		background-color: rgb(7, 8, 37);
 
-	.cs-wow-main-text-mobile {
-		font-family: 'Roboto Condensed';
-		font-weight: 700;
-		font-size: 200%;
-		padding: 10px 0;
-	}
+		.cs-wow-logo-name-mobile {
+			font-family: 'PT Sans';
+			font-weight: 700;
+			font-size: 300%;
+			padding: 30px 0 0;
+			color: white;
+		}
 
-	.cs-wow-sub-text-mobile {
-		font-family: 'Roboto Condensed';
-		font-weight: 300;
-		font-size: 130%;
-		padding: 10px 0;
-	}
+		.cs-wow-main-text-mobile {
+			font-family: 'Roboto Condensed';
+			font-weight: 700;
+			font-size: 200%;
+			padding: 10px 0;
+			color: white;
+		}
 
+		.cs-wow-sub-text-mobile {
+			font-family: 'Roboto Condensed';
+			font-weight: 300;
+			font-size: 130%;
+			padding: 0 0 50px;
+			color: white;
+		}
+	}
 }
 
 .cs-title-line {
@@ -95,6 +128,12 @@ h2.cs-title {
 	margin-bottom: 20px;
 	text-align: center;
 	text-transform: uppercase;
+}
+
+@media (max-width: 767px) {
+	h2.cs-title {
+		font-size: 24px;
+	}
 }
 
 .cs-footer {
